# aegis-core

./: .cspell.json  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: python-ci.yml
core-py/: CHANGELOG.md  README.md  SECURITY_TESTING.md  pyproject.toml
core-py/aegis_core/: __init__.py  audit.py  capability.py  capability_registry.py  decision_engine.py  errors.py  exceptions.py  gateway.py  mcp_server.py  policy.py  policy_engine.py  protocol.py  risk.py  runtime.py  tool_proxy.py
core-py/aegis_core/governance/: profile.py
core-py/aegis_core/mcp/: __main__.py
core-py/aegis_core_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
core-py/scripts/: generate_coverage_data.py
core-py/tests/: test_audit.py  test_capability_registry.py  test_decision_engine.py  test_errors.py  test_from_config.py  test_gateway.py  test_integration.py  test_policy_engine.py  test_protocol.py  test_tool_proxy.py
core-py/tests/governance/: test_profile.py
core-py/tests/security/: CHANGELOG.md  __init__.py  conftest.py  coverage.py  findings.py  test_atx1_coverage_completion.py  test_blue_team.py  test_red_team.py  test_red_team_r2.py  test_red_team_risk.py  test_red_team_risk_r2.py  test_red_team_risk_r3.py  test_red_team_risk_r4.py
core-rs/: README.md
docs/: README.md
schemas/: README.md
