[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-core"
version = "0.1.1b1"
description = "AEGIS Governance Enforcement Engine — Python reference implementation"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.11"
authors = [
    { name = "Finnoybu IP LLC" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["aegis_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "atm1: ATM-1 attack vector traceability (AV-1..AV-7)",
    "atx1: ATX-1 technique traceability (T1001..T10004)",
    "security_property: AEGIS security property validation (SP-1..SP-5)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
