[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-core"
version = "0.1.1b2"
description = "AEGIS Governance Enforcement Engine — Python reference implementation"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.11"
authors = [
    { name = "Finnoybu IP LLC" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["aegis_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "atm1: ATM-1 attack vector traceability (AV-1..AV-7)",
    "atx1: ATX-1 technique traceability (T1001..T10004)",
    "security_property: AEGIS security property validation (SP-1..SP-5)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Tests: allow long lines, unused vars, ambiguous unicode (security evasion
# tests use intentional homoglyphs), unconventional class names, lambda
# assignment, contextlib.suppress suggestions, unused loop vars, and
# pytest.raises match patterns that ruff flags as ambiguous.
"tests/**" = [
    "E501", "F841", "B007", "N801", "E731", "SIM105",
    "RUF001", "RUF002", "RUF003", "RUF043", "UP042",
]
# Scripts: allow late imports and long lines.
"scripts/**" = ["E402", "E501"]

[tool.mypy]
python_version = "3.11"
strict = true
